ovirt authz now passed as a parameter, added to example.conf

--- a/example.conf
+++ b/example.conf
@@ -1,5 +1,6 @@
 --ovirtuser test
 --ovirtpass test
 --ovirt-url https://test.ac.uk/
+--ovirtauthz @test.ac.uk-authz
 --ovirt-cluster test
 --ovirt-network test
